// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IvanCta /> should compact render correctly 1`] = `
<div>
  <div
    class="ivan-cta--compact"
  >
    <span
      class="text -xsmall -white"
    >
      We're open again at 8:30am. Why not chat to iVan?
    </span>
    <div
      class="image -expand -plain"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt=""
          class="image--native"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
    </div>
  </div>
</div>
`;

exports[`<IvanCta /> should default render correctly 1`] = `
<div>
  <div
    class="card ivan-cta -inline"
    data-testid="card"
  >
    <div
      class="image card-image -expand -plain"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt="Meet iVan"
          class="image--native"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
    </div>
    <div
      class="title"
    >
      <p
        class="heading -black -lead"
      >
        Meet iVan
      </p>
    </div>
    <span
      class="text -regular -dark"
    >
      Our helpful chatbot iVan is available 24/7 to answer your van financing questions
    </span>
  </div>
</div>
`;
